...

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/search"
            android:icon="@drawable/places_ic_search"
            android:title="Search" />
        <item
            android:id="@+id/recommendations"
            android:icon="@drawable/recommend"
            android:title="Recommendations" />
        <item
            android:id="@+id/nav_profile"
...
