...
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:background="@drawable/side_nav_bar"
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/reset_password"
            android:textColor="@android:color/black" />

...
